[gd_scene load_steps=3 format=3 uid="uid://dra6mivmam3tq"]

[ext_resource type="Script" uid="uid://j66ei3msbdxq" path="res://scripts/moral_choices.gd" id="1_21gav"]
[ext_resource type="FontFile" uid="uid://cl8ntpdrpicmf" path="res://assets/Born2bSportyV2.ttf" id="2_g2rvn"]

[node name="moralChoices" type="Node2D"]
script = ExtResource("1_21gav")

[node name="ProgressBar" type="TextureProgressBar" parent="."]
offset_left = 203.0
offset_top = 20.0
offset_right = 919.0
offset_bottom = 47.0
rounded = true

[node name="Button" type="TextureButton" parent="."]
offset_left = 64.0
offset_top = 504.0
offset_right = 240.0
offset_bottom = 580.0

[node name="Button2" type="TextureButton" parent="."]
offset_left = 400.0
offset_top = 504.0
offset_right = 576.0
offset_bottom = 580.0

[node name="Button3" type="TextureButton" parent="."]
offset_left = 752.0
offset_top = 504.0
offset_right = 928.0
offset_bottom = 580.0

[node name="Questions" type="Label" parent="."]
offset_left = 88.0
offset_top = 112.0
offset_right = 882.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource("2_g2rvn")
theme_override_font_sizes/font_size = 40
text = "The security firm you are working for has been breached. 
All passwords were leaked. What will you do?"
horizontal_alignment = 1

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="Button2" to="." method="_on_button_2_button_up"]
[connection signal="button_up" from="Button3" to="." method="_on_button_3_button_up"]
